data/usersCode/dsnfsd/question1/error.txt
/home/gauravghati/clash/data/usersCode/dsnfsd/question1/code1-0.cpp:1:1: error: ‘ewhkwekhkjhks’ does not name a type
 ewhkwekhkjhks ds hksd
 ^~~~~~~~~~~~~
